# py-build-cmake-libjpeg-turbo

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: wheels.yml
